--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
@@ -741,14 +741,17 @@ h6, .h6 {
   margin: 0 1rem;
   display: grid;
   grid-template-columns: auto 1fr 1fr;
-  grid-template-areas: "main-text main-text main-text" "course-box course-form course-form" "aside course-form course-form" ". course-form course-form" ". course-form course-form";
+  grid-template-areas: "main-text main-text main-text" "aside course-form course-form" "course-box course-form course-form" ". course-form course-form" ". course-form course-form";
   gap: 2rem 10rem;
 }
-.courses .container-test .text-center {
+.courses .container-test .page-title {
   grid-area: main-text;
 }
 .courses .container-test .courses-aside {
   grid-area: aside;
+}
+.courses .container-test .courses-aside thead tr:first-child {
+  border-bottom: 1px solid var(--color-gray-900);
 }
 .courses .container-test .grid-item {
   grid-area: course-box;
@@ -886,9 +889,6 @@ h6, .h6 {
 .courses .container-test .courses-form {
   background: var(--color-gray-300);
   padding: 2rem;
-  /*            what-you-learn {
-
-              }*/
 }
 .courses .container-test .courses-form .form-group {
   margin: 0.5rem 0;
