--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_courses_backoffice.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_courses_backoffice.scss
@@ -4,15 +4,23 @@
         display: grid;
         grid-template-columns: auto 1fr 1fr;
         grid-template-areas:
-            'main-text main-text main-text' 'course-box course-form course-form' 'aside course-form course-form' '. course-form course-form' '. course-form course-form';
+            'main-text main-text main-text' 'aside course-form course-form' 'course-box course-form course-form' '. course-form course-form' '. course-form course-form';
         gap: 2rem 10rem;
 
-        .text-center {
+        .page-title {
             grid-area: main-text;
         }
 
         .courses-aside {
             grid-area: aside;
+
+            thead {
+                tr {
+                    &:first-child {
+                        border-bottom: 1px solid var(--color-gray-900);
+                    }
+                }
+            }
         }
 
         .grid-item {
@@ -203,11 +211,7 @@
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr 1fr;
                 gap: 0 1rem;
-
             }
-/*            what-you-learn {
-                   
-            }*/
 
             .program-details-group {
                 display: block;
@@ -224,7 +228,7 @@
                     }
 
                     &:last-child {
-                        margin:0 0 1rem 0;
+                        margin: 0 0 1rem 0;
                     }
 
                     .form-group {
