--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/Home"
 @attribute [Authorize]
 
 <PageTitle>Silicon BackOffice</PageTitle>
@@ -35,6 +35,15 @@
                     <h5 class="card-title">Settings</h5>
                     <p class="card-text">Adjust system settings and preferences.</p>
                     <a href="/settings" class="btn btn-primary">Go to Settings</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Manage Subscribers</h5>
+                    <p class="card-text">See all subscribers, update and delete.</p>
+                    <a href="/users" class="btn btn-primary">Go to Users</a>
                 </div>
             </div>
         </div>
