subscribers in progress

--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Home.razor
@@ -1,4 +1,4 @@
-﻿@page "/Home"
+﻿@page "/"
 @attribute [Authorize]
 
 <PageTitle>Silicon BackOffice</PageTitle>
@@ -43,7 +43,7 @@
                 <div class="card-body text-center">
                     <h5 class="card-title">Manage Subscribers</h5>
                     <p class="card-text">See all subscribers, update and delete.</p>
-                    <a href="/users" class="btn btn-primary">Go to Users</a>
+                    <a href="/users" class="btn btn-primary">Go to subscribers</a>
                 </div>
             </div>
         </div>
