--- a/SiliconBackOffice/SiliconBackOffice/Components/Account/Pages/Login.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Account/Pages/Login.razor
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="content">
             <h1>Welcome back</h1>
-            <p>Don't have an account yet? <NavLink href="/SignUp">Sign up here.</NavLink></p>
+            <p>Don't have an account yet? <NavLink href="/Account/Register">Sign up here.</NavLink></p>
             <SignInFormPartial />
             <div id="forgot"><NavLink href="/">Forgot your password?</NavLink></div>
             <hr />
