--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/_sections.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/_sections.scss
@@ -47,6 +47,7 @@
 
 @import './sections/auth-scss/_signUp.scss';
 @import './sections/auth-scss/_signIn.scss';
+@import './_404-error.scss';
 
 
 @import './sections/_courses_backoffice.scss';
