--- a/SiliconBackOffice/SiliconBackOffice/Components/Pages/Subscribers.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/Pages/Subscribers.razor
@@ -69,7 +69,7 @@
         --input-background: #EDF2F7;
         --input-border: #CBD5E0; 
         --input-focus-border: #63B3ED; 
-        --success-color: #48BB78; 
+        --success-color: #3775D5;
         --danger-color: #F56565; 
         --btn-hover-lighten: 10%; /
     }
@@ -152,8 +152,7 @@
     }
 
         .btn-success:hover, .btn-success:focus {
-            background-color: #57C785; 
-          
+            background-color: #6F96D3;
         }
 
     .btn-danger {
