--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/app.css
@@ -1085,6 +1085,24 @@ h6, .h6 {
   margin: 0;
 }
 
+label {
+  display: block;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.find-email {
+  display: flex;
+  align-items: baseline;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+.find-email input {
+  border-radius: 0.375rem;
+  width: 25%;
+  padding: 0.4rem;
+}
+
 .saved-courses-form {
   background-color: var(--color-gray-300);
   margin: 1rem 0;
@@ -1095,13 +1113,8 @@ h6, .h6 {
   grid-gap: 1rem;
   grid-template-areas: "courses users checkboxes";
 }
-.saved-courses-form .form-wrapper-saved-courses label {
-  display: block;
-  font-weight: 700;
-  margin-bottom: 0.5rem;
-}
 .saved-courses-form .form-wrapper-saved-courses .form-group-saved-courses-id input, .saved-courses-form .form-wrapper-saved-courses .form-group-saved-users-id input {
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
   width: 100%;
   margin-bottom: 0.5rem;
   text-align: center;
