--- a/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_saved-courses_backoffice.scss
+++ b/SiliconBackOffice/SiliconBackOffice/wwwroot/css/scss/sections/_saved-courses_backoffice.scss
@@ -1,4 +1,23 @@
 
+label {
+    display: block;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+
+.find-email {
+    display: flex;
+    align-items: baseline;
+    gap: 1rem;
+    margin-bottom: 2rem;
+
+    input {
+        border-radius: 0.375rem;
+        width: 25%;
+        padding: 0.4rem;
+    }
+}
+
 .saved-courses-form {
     background-color: var(--color-gray-300);
     margin: 1rem 0;
@@ -9,16 +28,12 @@
         grid-gap: 1rem;
         grid-template-areas: "courses users checkboxes";
 
-        label {
-            display: block;
-            font-weight: 700;
-            margin-bottom: 0.5rem;
-        }
+
 
         .form-group-saved-courses-id, .form-group-saved-users-id {
 
             input {
-                border-radius: 0.25rem;
+                border-radius: 0.375rem;
                 width: 100%;
                 margin-bottom: 0.5rem;
                 text-align: center;
@@ -41,7 +56,6 @@
             justify-content: space-around;
 
             .checkbox-group-form {
-
             }
         }
     }
