--- a/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
+++ b/SiliconBackOffice/SiliconBackOffice/Components/_Imports.razor
@@ -80,6 +80,7 @@
 @using SiliconBackOffice.Models.Courses
 @using SiliconBackOffice.Components.Pages.Partials.Courses
 @using SiliconBackOffice.Services
+@using SiliconBackOffice.Factories
 
 
 @inject CourseService _courseService
